<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.example.droidcafe.SettingsActivity$MessagesFragment"
        app:icon="@drawable/messages"
        app:key="messages_header"
        app:title="@string/messages_header" />

    <Preference
        app:fragment="com.example.droidcafe.SettingsActivity$SyncFragment"
        app:icon="@drawable/sync"
        app:key="sync_header"
        app:title="@string/pref_header_account" />
    <Preference
        android:defaultValue="Default value"
        android:key="delivery_method_header"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/delivery_method_header"
        app:icon="@drawable/ic_shopping_cart"/>

</PreferenceScreen>